# rectory-apps

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  Readme.md  conftest.py  package.json  pyproject.toml  pytest.ini
.github/workflows/: black.yml  hanging-migrations.yml  tests.yml
accounts/: admin.py  admin_staff_monkeypatch.py  context_processors.py  models.py  urls.py  view_tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_allow_google_hd_bypass.py  0004_alter_user_allow_google_hd_bypass.py  0005_loginconfiguration_temporarylogincode.py
assets/: Paw.afdesign
blackbaud/: admin.py  advising.py  jobs.py  middleware.py  models.py  students.py  sync.py  test_advising.py  test_students.py  test_sync.py  urls.py  views.py
blackbaud/migrations/: 0001_initial.py  0002_advisorycourse_advisoryschool_historicaladvisorycourse_historicaladvisoryschool.py  0003_auto_20220917_1205.py  0004_syncconfig_teacher_group.py
blackbaud/templatetags/: blackbaud.py
calendar_generator/: admin.py  apps.py  forms.py  grids.py  models.py  pdf.py  pdf_presets.py  test_grids.py  test_models.py  test_views.py  urls.py  views.py
calendar_generator/migrations/: 0001_initial.py  0002_alter_day_position.py  0003_auto_20210716_0216.py  0003_create_groups.py  0004_auto_20210716_0216.py  0005_alter_calendar_options.py  0006_resetday.py  0007_auto_20210719_2117.py  0008_arbitrarylabel.py  0009_colorset_layout_rgbcolor.py  0010_auto_20220526_1240.py  0010_presets.py  0011_monthlydisplayset_onepagedisplayset.py  0012_auto_20220527_0844.py  0013_auto_20220527_0903.py  0014_auto_20220527_0950.py  0015_reset_presets.py  0016_auto_20220527_1436.py  0017_new_presets.py  0018_rename_rgbcolor_color.py  0019_fix_medium_blue.py  0020_alter_color_options.py
core/: health_middleware.py  node_module_finder.py  settings.py  test_home.py  test_sample.py  urls.py
enrichment/: admin.py  emails.py  jobs.py  models.py  slots.py  test_emails.py  urls.py  views.py
enrichment/migrations/: 0001_initial.py  0002_auto_20220920_1728.py  0003_auto_20220921_1014.py  0004_auto_20220921_1208.py  0005_editconfig.py  0006_auto_20220921_1749.py  0007_alter_signup_options.py  0008_emailconfig_historicalemailconfig_relatedaddress.py  0009_auto_20221014_1619.py  0010_alter_signup_options.py  0011_alter_signup_options.py  0012_alter_option_not_available_on_and_more.py
evaluations/: admin.py  forms.py  models.py  urls.py  views.py
evaluations/migrations/: 0001_initial.py  0002_alter_multiplechoiceanswer_answer.py  0003_auto_20230123_0957.py  0004_alter_tag_category.py  0005_auto_20230123_1034.py  0006_legacyfreeformquestion_legacymultiplechoiceanswer_legacymultiplechoicequestion_legacyquestionset.py  0007_auto_20230123_1529.py  0008_reportcategorizer_reportcategorizertagcategory.py  0009_uploadconfiguration_uploadconfigurationtagcategory.py  0010_alter_uploadconfigurationtagcategory_upload_configuration.py  0011_auto_20230226_1414.py  0012_tag_created_at.py  0013_remove_tagcategory_admin_filter_display_values.py  0014_alter_tagcategory_admin_filter_breakout_values.py  0015_rename_admin_filter_breakout_values_tagcategory_show_as_filter.py  0016_auto_20240422_1044.py
icons/: admin.py  models.py  urls.py  view_types.py  views.py
icons/migrations/: 0001_initial.py  0002_auto_20210726_0024.py  0002_icon.py  0003_icon_icon.py  0004_auto_20210720_2203.py  0005_auto_20210721_0206.py  0006_auto_20210721_0214.py  0007_auto_20210721_0215.py  0008_auto_20210724_1913.py  0009_auto_20210724_2008.py  0010_textlink_position.py  0011_remove_textlink_position.py  0012_auto_20210725_1800.py  0013_auto_20210725_1804.py  0014_auto_20210725_1846.py
jobs/: __init__.py  jobs.py  tests.py  tracker.py
logging_middleware/: middleware.py
nav/templatetags/: nav_tags.py
scripts/: openapi-schema.yaml  sync.py
scripts/sync/: main.py  manager.py  managers.py  parsers.py  single.py  students.py  teachers.py
sis/: admin.py  apps.py  models.py  tests_api.py
sis/api/: serializers.py  urls.py  views.py
sis/migrations/: 0001_initial.py  0002_auto_20210906_2113.py  0002_remove_academicyear_current.py  0003_alter_parent_phone_home.py  0003_remove_student_current.py  0004_auto_20210906_1531.py  0005_auto_20210906_1623.py  0006_auto_20210906_1657.py  0007_alter_grade_description.py  0008_auto_20210906_1810.py  0009_alter_dorm_dorm_name.py  0010_alter_config_current_year.py  (+6 more)
stored_mail/: admin.py  apps.py  jobs.py  models.py
templates/: base.html  base_sparse.html  home.html
(+85 files in other folders)
