[tool.poetry]
name = "rectory-apps"
version = "0.0.0"
description = ""
authors = ["Adam Peacock <adam@thepeacock.net>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "~=3.2"
django-environ = "*"
django-admin-sortable2 = "*"
psycopg2 = "*"
whitenoise = "*"
uvicorn = "*"
gunicorn = "*"
django-safemigrate = "*"
django-bootstrap4 = "*"
google-auth = "*"
requests = "*"
reportlab = "*"
django-bootstrap-breadcrumbs = "*"
django-anymail = {extras = ["mailgun"], version = "*"}
django-lb-health-check = "^1.0"
django-quick-jobs = "^0.4.0"
htmlBuilder = "^1.0.0"
structlog = "^21.5.0"
django-stubs-ext = "^0.4.0"
django-solo = "^2.0.0"
types-requests = "^2.28.10"
django-structlog = "^3.0.1"
humanize = "^4.3.0"
django-simple-history = "^3.1.1"
pydantic = "^1.10.2"
django-hijack = "^3.2.1"
fontawesomefree = "^6.2.0"
frozendict = "^2.3.4"
django-node-assets = "^0.9.11"
premailer = "^3.10.0"
django-braces = "^1.15.0"

[tool.poetry.group.dev.dependencies]
rope = "*"
pytest = "*"
pytest-django = "*"
django-debug-toolbar = "*"
ipython = "*"
mypy = "^0.950"
black = "^22.3.0"
django-stubs = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"