[project]
name = "rectory-apps"
version = "0.0.0"
description = ""
authors = [{ name = "Adam Peacock", email = "adam@thepeacock.net" }]
requires-python = "<3.11,>=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "django~=3.2",
    "django-environ",
    "django-admin-sortable2",
    "psycopg2",
    "whitenoise",
    "gunicorn",
    "django-safemigrate",
    "django-bootstrap4",
    "google-auth",
    "requests",
    "reportlab",
    "django-bootstrap-breadcrumbs",
    "django-anymail[mailgun]",
    "django-lb-health-check<2.0,>=1.0",
    "django-quick-jobs<1.0.0,>=0.4.0",
    "htmlBuilder<2.0.0,>=1.0.0",
    "structlog<22.0.0,>=21.5.0",
    "django-stubs-ext<1.0.0,>=0.4.0",
    "django-solo<3.0.0,>=2.0.0",
    "types-requests<3.0.0,>=2.28.10",
    "django-structlog<4.0.0,>=3.0.1",
    "humanize<5.0.0,>=4.3.0",
    "django-simple-history<4.0.0,>=3.1.1",
    "pydantic<2.0.0,>=1.10.2",
    "django-hijack<4.0.0,>=3.2.1",
    "fontawesomefree<7.0.0,>=6.2.0",
    "frozendict<3.0.0,>=2.3.4",
    "django-node-assets<1.0.0,>=0.9.11",
    "premailer<4.0.0,>=3.10.0",
    "django-braces<2.0.0,>=1.15.0",
    "openpyxl<4.0.0,>=3.1.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "rope",
    "pytest",
    "pytest-django",
    "django-debug-toolbar",
    "ipython",
    "mypy<1.0,>=0.950",
    "black<23.0.0,>=22.3.0",
    "django-stubs<2.0.0,>=1.11.0",
]

[tool.pdm]
distribution = false


[tool.pdm.build]
includes = []


[tool.django-stubs]
django_settings_module = "core.settings"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
