[project]
name = "rectory-apps"
version = "0.0.0"
description = ""
authors = [{ name = "Adam Peacock", email = "adam@thepeacock.net" }]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "django~=4.2.11",
    "django-environ~=0.11.2",
    "django-admin-sortable2~=2.1.10",
    "whitenoise~=6.6.0",
    "gunicorn~=21.2.0",
    "django-safemigrate~=4.3",
    "django-bootstrap4~=24.1",
    "google-auth~=2.29.0",
    "requests~=2.31.0",
    "reportlab~=4.1.0",
    "django-anymail[mailgun]~=10.3",
    "django-lb-health-check<2.0,>=1.0",
    "django-quick-jobs>=0.4.0",
    "htmlBuilder<2.0.0,>=1.0.0",
    "structlog>=24.1.0",
    "django-solo~=2.2.0",
    "django-structlog~=8.0.0",
    "humanize~=4.9.0",
    "django-simple-history~=3.5.0",
    "pydantic<2.0.0,>=1.10.2",
    "django-hijack~=3.4.5",
    "frozendict~=2.4.1",
    "django-node-assets<1.0.0,>=0.9.13",
    "premailer<4.0.0,>=3.10.0",
    "django-braces<2.0.0,>=1.15.0",
    "psycopg>=3.1.18",
    "django-bootstrap-breadcrumbs @ git+https://github.com/Hovercross/bootstrap-breadcrumbs.git",
]

[tool.django-stubs]
django_settings_module = "core.settings"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
    "djlint>=1.36.4",
    "ipython>=9.5.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "rope>=1.14.0",
    "types-requests>=2.32.4.20250809",
]
